# cacao

./: .clang-format  .cproject  .cvsignore  .gitignore  .hgignore  .project  ARCH-CHANGES  AUTHORS  COPYING  ChangeLog  ChangeLog-2005  INSTALL  INSTALL.CACAO  Makefile  Makefile.am  Makefile.in  Makefile.maintainer  Makefile.pre-automake  NEWS  README  README.boehm  THIRDPARTY  TODO  acconfig.h  aclocal.m4  asmpart.h  autogen.sh  builtin.c  builtin.h  cacaoh.c  callargs.h  compiler.c  compiler.h  config.h.in  config.sub  configure  configure.ac  configure.in  exceptions.c  exceptions.h  (+28 more)
contrib/vmlog/: Makefile.am  README  vmlog.c  vmlog.h  vmlog_cacao.c  vmlog_cacao.h  vmlog_cacao.patch  vmlogfilter.c
doc/: Makefile.am  Makefile.in  array.tex  bibliography.bib  cacao.1  collect.doc  design_onstack_replacement.txt  gen.doc  inlining_stacktrace.txt  net.bib  net.tex  stack.txt  stack_frames.txt  threads.tex
doc/abc_optimization/: BakkalaureatSeminararbeitKB2010.tex  Makefile.am  gwa.sty
doc/doxygen/: Doxyfile  Doxyfile.in  Makefile.am
doc/handbook/: .cvsignore  Makefile.am  arm.tex  cacao.tex  intro.tex  java.bib  jit.tex  loader.tex  overview.tex  powerpc.tex  runtime.tex  verification.tex  x86.tex  x86_64.tex
doc/intern_tables/: Makefile.am  protokoll.tex
jit/: Makefile.am  Makefile.in  codegen.inc  codegen.inc.h  inline.c  inline.h  jit.c  jit.h  jitdef.h  lsra.h  lsra.inc  mcode.c  parse.c  parse.h  parseEXTRAopcodes.h  parseRT.c  parseRT.h  parseRTflags.h  parseRTprint.h  parseRTstats.c  parseRTstats.h  parseXTA.h  reg.c  reg.h  reg.inc  sets.c  sets.h  stack.c  stack.h  typecheck.c  typecheck.h
jit/alpha/: Makefile.am  asmpart.S  codegen.c  codegen.h  disass.c  disass.h  machine-instr.h  native-math.h  sigcontext.h  threads.h  types.h
jit/i386/: Makefile.am  asmpart.S  codegen.c  codegen.h  dis-asm.h  disass.c  disass.h  emitfuncs.c  emitfuncs.h  machine-instr.h  methodtable.c  methodtable.h  native-math.h  threads.h  types.h
jit/loop/: Makefile.am  analyze.c  analyze.h  graph.c  graph.h  loop.c  loop.h  tracing.c  tracing.h
jit/mips/: Makefile.am  asmpart.S  codegen.c  codegen.h  disass.c  disass.h  machine-instr.h  threads.h  types.h
jit/powerpc/: Makefile.am  asmpart.S  codegen.c  codegen.h  disass.h  machine-instr.h  native-math.h  ppc-opc.c  types.h
jit/x86_64/: Makefile.am  arch.h  asmpart.S  codegen.c  codegen.h  emitfuncs.c  emitfuncs.h  machine-instr.h  methodtable.c  methodtable.h  native-math.h  threads.h  types.h
mm/: Makefile  Makefile.am  Makefile.in  Makefile.pre-automake  allocator.c  allocator.h  allocator2.c  allocator3.c  allocator3.h  bitmap2.c  bitmap2.h  bitmap3.c  boehm.c  boehm.h  heap.old.c  heap2.c  heap3.c  lifespan.c  lifespan.h  mm.h  mm3.h
mm/boehm-gc/: acinclude.m4  aix_irix_threads.c  allchblk.c  alloc.c  backgraph.c  configure  configure.in  configure.in~  darwin_stop_world.c  headers.c  malloc.c  mark.c  misc.c  mkinstalldirs  os_dep.c  pthread_stop_world.c  pthread_support.c  reclaim.c  solaris_threads.c  specific.c  threadlibs.c
nat/: AccessController.c  AccessController.h  Adler32.c  Adler32.h  Array.c  Array.h  BigInteger.c  BigInteger.h  CRC32.c  CRC32.h  Class.c  Class.h  ClassLoader.c  ClassLoader.h  ClassLoader_NativeLibrary.c  ClassLoader_NativeLibrary.h  Compiler.c  Compiler.h  Constructor.c  Constructor.h  DatagramPacket.c  DatagramPacket.h  Date.h  Deflater.c  Deflater.h  Double.c  Double.h  Exception.h  Field.c  Field.h  File.h  FileChannelImpl.c  FileDescriptor.c  FileDescriptor.h  FileInputStream.c  FileInputStream.h  FileOutputStream.c  FileOutputStream.h  FileSystem.c  FileSystem.h  (+223 more)
src/: Makefile.am
src/boehm-gc/: .cvsignore  Makefile.am  aix_irix_threads.c  allchblk.c  alloc.c  alpha_mach_dep.S  autogen.sh  configure.in  darwin_stop_world.c  dbg_mlc.c  dyn_load.c  finalize.c  mach_dep.c  malloc.c  mallocx.c  mark.c  mark_rts.c  misc.c  os_dep.c  pthread_stop_world.c  pthread_support.c  solaris_pthreads.c  threadlibs.c  win32_threads.c
src/cacao/: .cvsignore  Makefile.am  cacao.c  cacao.cpp  cacao.h
src/cacaoh/: .cvsignore  Makefile.am  cacaoh.c  dummy.c  dummy.cpp  headers.c  headers.h
src/classes/: Makefile.am
src/fdlibm/: .cvsignore  Makefile.am  fdlibm.h  ieeefp.h  java-assert.h  mprec.h
src/future/: Makefile.am  unordered_map.hpp  unordered_set.hpp
src/lib/: .cvsignore  Makefile.am
src/libffi/: .cvsignore  Makefile.am  autogen.sh  configure.ac  fficonfig.h.in
src/libltdl/: .cvsignore  autogen.sh  ltdl.c
src/mm/: Makefile.am  boehm.c  boehm.h  codememory.c  codememory.cpp  codememory.h  codememory.hpp  dumpmemory.c  dumpmemory.cpp  dumpmemory.h  dumpmemory.hpp  gc-boehm.cpp  gc-common.h  gc-none.cpp  gc.hpp  memory.c  memory.cpp  memory.h  memory.hpp  nogc.c  tlh.c  tlh.cpp  tlh.h  tlh.hpp
src/native/: .cvsignore  Makefile.am  classes.am  jni.c  jni.cpp  jni.h  jni.hpp  llni.c  llni.cpp  llni.h  llni.hpp  localref.c  localref.cpp  localref.h  localref.hpp  natcalls.h  native.c  native.cpp  native.h  native.hpp  nativecalls.inc  nativetable.inc
src/scripts/: .cvsignore  Makefile.am  cacao.in  jarsigner.in  java.in  javac.in  keytool.in  kjc.in  rmic.in  rmiregistry.in
src/threads/: .cvsignore  Makefile.am  ThreadRuntime-classpath.cpp  ThreadRuntime-cldc11.cpp  ThreadRuntime-openjdk.cpp  atomic.c  atomic.cpp  atomic.hpp  condition.hpp  (+26 more)
tests/: .gdbinit  A.java  AA.java  B.java  C.java  C2.java  CC.java  D.java  Howdy.java  In1.java  InlineExTest.java  Makefile.am  Makefile.in  TestArrayClasses.java  TestArrayClasses.output  a.java  b.java  extest.2output  extest.java  extest.output  extest_clinit.java  forname.java  fp.java  fp.output  fptest.java  fptest.output  intsieve.java  jctest.dec  jctest.java  jctest.output  prop.java  remtest.java  rtMissedIn0  sleep.java
threads/: Makefile  Makefile.am  Makefile.in  locks.c  locks.h  nativethread.c  nativethread.h  notyet.c  thread.c  thread.h  threadio.c  threadio.h
toolbox/: Makefile  Makefile.am  Makefile.in  chain.c  chain.h  list.c  list.h  logging.c  logging.h  loging.c  loging.h  memory.c  memory.h  tree.c  tree.h
(+2249 files in other folders)
