## Process this file with automake to produce Makefile.in

# $Id: Makefile.am 1621 2004-11-30 13:06:55Z twisti $

MAINTAINERCLEANFILES = Makefile.in configure

SUBDIRS = doc src tests

EXTRA_DIST = \
	html/cacaoinstall.html \
	html/cacaoman.html \
	html/index.html


## Local variables:
## mode: Makefile
## indent-tabs-mode: t
## c-basic-offset: 4
## tab-width: 8
## compile-command: "automake --add-missing"
## End:
